moved to python 3

--- a/HT_inv test.ipynb
+++ b/HT_inv test.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from scipy.special import jn, jn_zeros\n",
@@ -21,8 +23,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "j_nu=0\n",
@@ -37,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -49,13 +53,13 @@
       "pruning r, log_space,n_f: True 2\n",
       "pruned r: 747\n",
       "nr: 747\n",
-      "CPU times: user 15.5 s, sys: 356 ms, total: 15.9 s\n",
-      "Wall time: 16 s\n",
+      "CPU times: user 16.9 s, sys: 313 ms, total: 17.2 s\n",
+      "Wall time: 17.5 s\n",
       "pruning r, log_space,n_f: True 2\n",
       "pruned r: 747\n",
       "nr: 747\n",
-      "CPU times: user 15.2 s, sys: 286 ms, total: 15.5 s\n",
-      "Wall time: 15.5 s\n"
+      "CPU times: user 17.9 s, sys: 359 ms, total: 18.2 s\n",
+      "Wall time: 18.6 s\n"
      ]
     }
    ],
@@ -69,31 +73,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "f=1./HT.r[j_nu]\n",
     "k_test,g=HT_inv.projected_correlation(k_pk=HT.r[j_nu],pk=f,j_nu=j_nu)\n",
-    "g*=HT.rmax**2/HT.kmax**2\n",
+    "g*=HT.rmax[j_nu]**2/HT.kmax[j_nu]**2\n",
     "g*=(2*np.pi)**2\n",
     "r_test,f2=HT.projected_correlation(k_pk=k_test,pk=g,j_nu=j_nu)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x13227fffd0>]"
+       "[<matplotlib.lines.Line2D at 0x130cc1fdd8>]"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Deep/anaconda/envs/py36/lib/python3.6/site-packages/matplotlib/font_manager.py:1328: UserWarning: findfont: Font family ['serif'] not found. Falling back to DejaVu Sans\n",
+      "  (prop.get_family(), self.defaultFamily[fontext]))\n"
+     ]
     },
     {
      "data": {
@@ -113,18 +125,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1322872a50>]"
+       "[<matplotlib.lines.Line2D at 0x130e252f60>]"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Deep/anaconda/envs/py36/lib/python3.6/site-packages/matplotlib/font_manager.py:1328: UserWarning: findfont: Font family ['serif'] not found. Falling back to DejaVu Sans\n",
+      "  (prop.get_family(), self.defaultFamily[fontext]))\n"
+     ]
     },
     {
      "data": {
@@ -147,28 +167,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python36",
    "language": "python",
-   "name": "python2"
+   "name": "py36"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
